# yandex-search

./: AGENTS.md  README.md  README.ru.md  llms.txt  pyproject.toml
src/yandex_cli/: main.py
