[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-search"
version = "0.1.0"
description = "Command-line interface for Yandex Search API — web search and generative AI search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["yandex", "search", "cli", "yandex-cloud", "russian-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/davidparker7966-design/yandex-search"
Repository = "https://github.com/davidparker7966-design/yandex-search"
Issues = "https://github.com/davidparker7966-design/yandex-search/issues"

[project.scripts]
yandex-search = "yandex_cli.main:search"
yandex-gen    = "yandex_cli.main:gen"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_cli"]
